--- a/portfolio.html
+++ b/portfolio.html
@@ -15,43 +15,45 @@
             integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
             crossorigin="anonymous" referrerpolicy="no-referrer" />
         
-    <link rel="stylesheet" href="./css/styles.css">
+    
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
     <!-- HEADER -->
-    <header class="header">
-        <div class="container header-container ">
-            <nav class="navigation">
-                <a class="logo-link link animate__rollIn" href="./index.html">Web<span class="logo">Studio</span></a>
-                <ul class="menu list header-style">
-                    <li class="menu-item">
-                        <a class="menu-link link " href="./index.html">Студия</a>
-                    </li>
-                    <li class="menu-item">
-                        <a class="menu-link link current " href="./portfolio.html">Портфолио</a>
-                    </li>
-                    <li class="menu-item">
-                        <a class="menu-link link" href="">Контакты</a>
-                    </li>
-                </ul>
-            </nav>
-            <ul class="contacts list header-style">
-                <li class="contacts-item">
-                    <a class="mail-link link" href="mailto:info@devstudio.com">
-                        <svg class="contacts-list-icon" width="16px" height="12px">
-                            <use href="./images/sprite.svg#icon-e-mail"></use>
-                        </svg>info@devstudio.com</a>
+<header class="header">
+    <div class="container header-container ">
+        <nav class="header__nav">
+            <a class="logo link animate__rollIn" href="./index.html">Web<span class="logo__log">Studio</span></a>
+            <ul class="menu list header-style">
+                <li class="menu__item">
+                    <a class="menu__link link " href="./index.html">Студия</a>
                 </li>
-                <li class="contacts-item">
-                    <a class="tel-link link" href="tel:+380961111111">
-                        <svg class="contacts-list-icon" width="10px" height="16px">
-                            <use href="./images/sprite.svg#icon-tel"></use>
-                        </svg>+38 096 111 11 11</a>
+                <li class="menu__item">
+                    <a class="menu__link link current " href="./portfolio.html">Портфолио</a>
+                </li>
+                <li class="menu__item">
+                    <a class="menu__link link" href="">Контакты</a>
                 </li>
             </ul>
-        </div>
-    </header>
+        </nav>
+        <ul class="contacts list header-style">
+            <li class="contacts__item">
+                <a class="contacts__mail-link link" href="mailto:info@devstudio.com">
+                    <svg class="contacts__list-icon" width="16px" height="12px">
+                        <use href="./images/sprite.svg#icon-e-mail"></use>
+                    </svg>info@devstudio.com</a>
+            </li>
+            <li class="contacts__item">
+                <a class="contacts__tel-link link" href="tel:+380961111111">
+
+                    <svg class="contacts__list-icon" width="10px" height="16px">
+                        <use href="./images/sprite.svg#icon-tel"></use>
+                    </svg>+38 096 111 11 11</a>
+            </li>
+        </ul>
+    </div>
+</header>
     <main>
      <section>
          <div class="container">
@@ -225,7 +227,7 @@
     <footer class="footer area">
         <div class="footer-mooter container">
             <div class=" footer-container ">
-                <a class="logo-link link" href="./index.html">Web<span class="logo-footer">Studio</span></a>
+                <a class="logo link" href="./index.html">Web<span class="logo__log">Studio</span></a>
                 <address class="address-footer">
                     <ul class="address-footer-list header-style list">
                         <li class="address-footer-item">
@@ -233,10 +235,10 @@
                                 rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
                         </li>
                         <li class="address-footer-item">
-                            <a class="mail-link link" href="mailto:info@example.com">info@example.com</a>
+                            <a class="contacts__mail-link link" href="mailto:info@example.com">info@example.com</a>
                         </li>
                         <li class="address-footer-item">
-                            <a class="tel-link link" href="tel:+30991111111">+38 099 111 11 11</a>
+                            <a class="contacts__tel-link link" href="tel:+30991111111">+38 099 111 11 11</a>
                         </li>
                     </ul>
                 </address>
