--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
 <header class="header">
     <div class="container header-container ">
         <nav class="header__nav">
-            <a class="logo link animate__rollIn" href="./index.html">Web<span class="logo__log">Studio</span></a>
-            <ul class="menu list header-style">
+        <a class="logo header__logo link animate__rollIn" href="./index.html">Web<span class="logo_log">Studio</span></a>
+            <ul class="menu list header_style">
                 <li class="menu__item">
                     <a class="menu__link link " href="./index.html">Студия</a>
                 </li>
@@ -37,7 +37,7 @@
                 </li>
             </ul>
         </nav>
-        <ul class="contacts list header-style">
+        <ul class="contacts list header_style">
             <li class="contacts__item">
                 <a class="contacts__mail-link link" href="mailto:info@devstudio.com">
                     <svg class="contacts__list-icon" width="16px" height="12px">
@@ -58,19 +58,19 @@
      <section>
          <div class="container">
           <ul class="filter-menu list">
-              <li class="filter-menu-item ">
+              <li class="filter-menu__item filter-menu__btn ">
                    <button class="filter-btn" type="button">Все</button>
                 </li>
-               <li class="filter-menu-item">
+               <li class="filter-menu__item filter-menu__btn">
                    <button class="filter-btn" type="button">Веб-сайты</button>
                 </li>
-               <li class="filter-menu-item">
+               <li class="filter-menu__item filter-menu__btn">
                    <button class="filter-btn" type="button">Приложения</button>
                 </li>
-               <li class="filter-menu-item">
+               <li class="filter-menu__item filter-menu__btn">
                    <button class="filter-btn" type="button">Дизайн</button>
                 </li>
-               <li class="filter-menu-item">
+               <li class="filter-menu__item filter-menu__btn">
                    <button class="filter-btn" type="button">Маркетинг</button>
                 </li>
            </ul>
@@ -227,9 +227,9 @@
     <footer class="footer area">
         <div class="footer-mooter container">
             <div class=" footer-container ">
-                <a class="logo link" href="./index.html">Web<span class="logo__log">Studio</span></a>
+                <a class="logo link" href="./index.html">Web<span class="logo_footer">Studio</span></a>
                 <address class="address-footer">
-                    <ul class="address-footer-list header-style list">
+                    <ul class="address-footer-list header_style list">
                         <li class="address-footer-item">
                             <a class="address-map link" href="https://goo.gl/maps/ZKET5kt5Xee4YnMD7" target="_blank"
                                 rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
@@ -249,36 +249,36 @@
             <div class="social-container">
                 <h5 class="social-title">присоединяйтесь</h5>
                 <ul class="social-list list">
-                    <li class="social-list-item">
-                        <a href="" class="social-list-link">
-                            <svg class="social-list-icon">
+                    <li class="social-list__item">
+                        <a href="" class="social-list__link">
+                            <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#icon-instagram"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list-item">
-                        <a href="" class="social-list-link">
-                            <svg class="social-list-icon">
+                    <li class="social-list__item">
+                        <a href="" class="social-list__link">
+                            <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#icon-twitter"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list-item">
-                        <a href="" class="social-list-link">
-                            <svg class="social-list-icon">
+                    <li class="social-list__item">
+                        <a href="" class="social-list__link">
+                            <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#icon-facebook"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="social-list-item">
-                        <a href="" class="social-list-link">
-                            <svg class="social-list-icon">
+                    <li class="social-list__item">
+                        <a href="" class="social-list__link">
+                            <svg class="social-list__icon">
                                 <use href="./images/sprite.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                     </li>
                 </ul>
-    
+            
             </div>
         <form action="#" class="mailing-form">
             <label class="mailing-title" for="input-mail">Подпишитесь на рассылку</label>
